--- a/log4jtest/src/main/resources/log4j2.properties
+++ b/log4jtest/src/main/resources/log4j2.properties
@@ -3,10 +3,10 @@ log4j.rootLogger=file
 
 appender.rolling.type = RollingFile
 appender.rolling.name = rolling
-appender.rolling.fileName = /tmp/log4j-java.log
+appender.rolling.fileName = log4j-java.log
 appender.rolling.layout.type = PatternLayout
 appender.rolling.layout.pattern = [%d{ISO8601}][%-5p][%-25c{1.}] %marker%.-10000m%n
-appender.rolling.filePattern = /tmp/log4j-java-%d{yyyy-MM-dd}.log.gz
+appender.rolling.filePattern = log4j-java-%d{yyyy-MM-dd}.log.gz
 appender.rolling.policies.type = Policies
 appender.rolling.policies.size.type = SizeBasedTriggeringPolicy
 appender.rolling.policies.size.size = 1MB
