log4j config as jvm argument

--- a/log4jtest/build.gradle
+++ b/log4jtest/build.gradle
@@ -4,7 +4,7 @@ apply plugin: 'application'
 
 mainClassName = 'com.example.App'
 
-applicationDefaultJvmArgs = ["-Dlog4j.configurationFile=log4j2.properties", "-Dlog4j2.debug"]
+applicationDefaultJvmArgs = ["-Dlog4j.configurationFile=log4j.properties"]
 
 repositories {
     mavenCentral()
