--- a/log4j-slf4j/build.gradle
+++ b/log4j-slf4j/build.gradle
@@ -24,4 +24,7 @@ dependencies {
     compile "org.apache.logging.log4j:log4j-core:2.8.2"
     compile "org.apache.logging.log4j:log4j-1.2-api:2.8.2"
     compile "org.slf4j:log4j-over-slf4j:1.7.25"
+    compile "org.slf4j:jul-to-slf4j:1.7.25"
+    compile "ch.qos.logback:logback-classic:1.1.11"
+    compile "ch.qos.logback:logback-core:1.1.11"
 }
